# rt-claw

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  README_zh.md  claw_config.h  claw_gen_config.h.in  meson.build  meson.options  meson_options.txt
.github/workflows/: build-firmware.yml  ci-build-matrix.yml  ci-online-integration.yml  deploy-pages.yml
claw/: claw_init.c  meson.build
claw/core/: gateway.c  heartbeat.c  scheduler.c
claw/shell/: shell_commands.c
claw/tools/: claw_tools.c  tool_gpio.c  tool_lcd.c  tool_mouse.c  tool_net.c  tool_ota.c  tool_sched.c  tool_system.c
docs/en/: architecture.md  coding-style.md  contributing.md  design.md  esp32c3-qemu.md  porting.md  rt-claw-intro.md  usage.md  web-tools.md
docs/zh/: architecture.md  coding-style.md  contributing.md  design.md  esp32c3-qemu.md  porting.md  rt-claw-intro.md  usage.md  web-tools.md
include/: claw_board.h  claw_config.h  claw_ota.h
include/core/: gateway.h  scheduler.h
include/osal/: claw_kv.h
include/shell/: shell_commands.h
include/tools/: claw_tools.h
osal/: meson.build
osal/freertos/: claw_kv_freertos.c  claw_net_freertos.c  claw_os_freertos.c
osal/linux/: claw_os_linux.c
osal/rtthread/: claw_kv_rtthread.c  claw_net_rtthread.c  claw_os_rtthread.c
platform/esp32c3-qemu/: sdkconfig.defaults.demo
platform/esp32c3/components/rt_claw/: CMakeLists.txt  Kconfig
platform/esp32s3/: sdkconfig.defaults
platform/esp32s3-qemu/: sdkconfig.defaults
platform/linux/: shell.c
platform/qemu-a9-rtthread/: SConscript  SConstruct  rtconfig.py
platform/vexpress-a9/: SConscript  cross.ini
platform/vexpress-a9-qemu/: SConscript
platform/zynq-a9/: FreeRTOSIPConfig.h  cross.ini  main.c  meson.build  shell.c  syscalls.c  test_main.c
scripts/: api-proxy.py  checkpatch.pl  esp32c3-build.sh  esp32c3-flash.sh  gen-esp32c3-cross.py  gen-esp32s3-cross.py  setup-esp-env.sh  test-cross-matrix.sh  test-esp32-kconfig.sh  test-esp32-profiles.sh  test-meson-matrix.sh  test-quick-local.sh
src/: SConscript  claw_config.h  claw_init.c  meson.build
src/core/: scheduler.c
src/tools/: SConscript  claw_tools.c  claw_tools.h  tool_lcd.c  (+3 more)
tools/: esp32c3-build.sh  esp32c3-qemu-run.sh  qemu-run.sh  setup-esp-env.sh
website/: docs.html  index.html
(+72 files in other folders)
